add notes for advanced steps

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -16,7 +16,7 @@
     "1. Collect observation trends\n",
     "1. Collect simulation trends\n",
     "1. Look into IPCC reports why this occurs\n",
-    "1. Download model data for workflow analysis\n",
+    "1. Advanced steps\n",
     "\n",
     "By the end of the workflow, you will have a set of different futures that can help analyse a range of plausible futures. These ranges are accompanied by individual climate models that can be reviewed for future weather patterns.\n",
     "\n",
@@ -3094,10 +3094,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 5. Advanced steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Use climate timeseries from a set of individual models that span the uncertainty range \n",
+    "- Use these climate signals to adjust historical weather patterns using a stochastic weather generator\n",
+    "- When there are combinations of climate variables that cause trouble one can cluster models that present similar behaviour together.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
