finalise workflow for review

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -18,7 +18,7 @@
     "1. Look into IPCC reports why this occurs\n",
     "1. Advanced steps\n",
     "\n",
-    "By the end of the process, you will have a set of different futures that can help analyse a range of plausible futures. These ranges are accompanied by individual climate models that can be reviewed for future weather patterns.\n",
+    "By the end of the process, you will insights into a range of plausible fures. These ranges are accompanied by individual climate models that can be reviewed for future weather patterns.\n",
     "\n",
     "To help guide you we have worked out and example. We highlighted each of the steps using a real-life example in Latvia. Be sure to expand the Latvian example if you want to see how we execute each step for a real study.\n",
     "\n",
@@ -3574,10 +3574,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use climate timeseries from a set of individual models that span the uncertainty range \n",
-    "- Use these climate signals to adjust historical weather patterns using a stochastic weather generator\n",
-    "- When there are combinations of climate variables that cause trouble one can cluster models that present similar behaviour together.\n"
+    "Here we propose some steps that could be taken to gain better insights into the actual impacts of these future trends.\n",
+    "\n",
+    "1. Using Climate Time Series from Multiple Models in impact analysis\n",
+    "\n",
+    "    *Why this matters*: Climate projections come with uncertainty, as no single model can capture the full range of possible futures. By using a set of models that span this uncertainty, you ensure that your projections cover a wide spectrum of possible scenarios, helping to account for the unpredictable nature of climate change.\n",
+    "    \n",
+    "    *Action*: Select a diverse set of climate models that represent different outcomes for the climate impact variables and use these in impact analyses. These will help you explore the range of potential outcomes, from worst-case to moderate scenarios.\n",
+    "\n",
+    "2. Adjusting Historical Weather Patterns with a Stochastic Weather Generator\n",
+    "\n",
+    "    *Why this matters*: Simply applying model projections can be too coarse for the complexity of daily weather variations. By adjusting historical weather patterns based on projected climate signals, you can generate more detailed scenarios for how weather might evolve under future climate conditions.\n",
+    "\n",
+    "    Action: Use a stochastic weather generator to blend the climate signals from the models with observed historical weather data. This process can mimic how variables like temperature and precipitation might shift, while preserving local conditions.\n",
+    "\n",
+    "3. Use these projections in combination with socioeconomic changes\n",
+    "    *Why it matters*: The severity and impact of climate change depend not just on the physical climate but on how societies evolve. Integrating climate projections with different socioeconomic scenarios allows for more holistic scenarios, reflecting changes in population, technology, and governance that either increase or decrease vulnerability.\n",
+    "\n",
+    "    *Action*: Combine your climate model outputs with scenarios of regional socioeconomic development. For example, a lot of increased precipitation combined with rapid urban growth may result in higher risks than the same climate future with strong policy intervention and innovation. Use such combinations to explore how risks might change based on both climate and socioeconomic dynamics."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
