--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -4,37 +4,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Climate projections: exploring plausibilities"
+    "# Exploring future climate projections and plausibility"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On this page, we will explore the range of potential climate futures for your region. This page will go through the following steps: \n",
-    "1. Define locally relevant climatic impact drivers\n",
-    "1. Collect observation trends\n",
-    "1. Collect simulation trends\n",
-    "1. Look into IPCC reports why this occurs\n",
-    "1. Advanced steps\n",
+    "An often-used resource to analyse future risks is the set of projections from climate models. The climate models analyse how weather patterns will change under different emission scenarios. The resulting estimates of climate conditions are often called projections. These projections help gain insight into what the world of tomorrow can look like in terms of average temperature increases, heavy rainfall estimates, heatwave days, dry spell duration, and much more. \n",
     "\n",
-    "By the end of the process, you will insights into a range of plausible fures. These ranges are accompanied by individual climate models that can be reviewed for future weather patterns.\n",
+    "However, since there are many climate models that each have their own projections, we will discuss how we can make sense of these numbers and how we can explore a representative scenario range.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Theory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Many models, many different projections\n",
+    "Across many climate model runs, many different climate conditions are projected. One reason for this variation is the number of emissions in the atmosphere that cause global warming. Another reason is that even within a similar emission scenario, different models behave differently because they represent the Earth's climate system differently. Since there is imperfect knowledge, models have varying assumptions and parameters, leading to varying outcomes. Lastly, there is what we call internal variability. This means that even for a projection with a similar emission scenario and the same climate model, there can be a different projection. This is due to the natural randomness of the weather. This randomness is especially present when considering changes at small scales.\n",
     "\n",
-    "To help guide you we have worked out and example. We highlighted each of the steps using a real-life example in Latvia. Be sure to expand the Latvian example if you want to see how we execute each step for a real study.\n",
+    "This means that for example, in the mid-century, some models might project significant droughts in a specific region, while another projection might show limited change in the same region. However, both are plausible scenarios. Here, we propose various ways to navigate these uncertainties.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Emission scenarios\n",
+    "One way to analyse the group of projections from GCMs is by averaging the projections per emission scenario. Emission scenarios like RCPs (Representative Concentration Pathways) and SSPs (Shared Socioeconomic Pathways) are used to predict how the climate will change in the future due to human greenhouse gas emissions. These scenarios are often found in climate risk datasets and also used often here in the CLIMAAX workflows. A key strength of these scenarios is their focus on human-caused changes. To make the predictions more reliable, scientists average the results from multiple climate models, which helps smooth out uncertainties and natural climate variations.\n",
     "\n",
-    "The IPCC divides Europe into four climatic zones. These zones are based on areas with similar climate typologies. For each of these zones, climate projection statistics are available. \n",
-    "- NEU - Northern Europe\n",
-    "- WCE - West and Central Europe\n",
-    "- MED - Mediterranean\n",
-    "- EEU - Eastern Europe\n",
+    "However, these scenarios can be tricky. Different climate models predict different changes in temperature and rainfall patterns, even with the same emissions levels, leading to a wide range of possible outcomes. By averaging the model projections, some important details can get lost.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`````{admonition} What are SSPs?\n",
+    ":class: hint dropdown\n",
+    "Future climate projections are formulated around Shared Socioeconomic Pathways (SSPs), which are scenarios of projected socioeconomic global changes given the figure below. The lower SSP numbers represent more sustainable developments and a larger number of implemented climate mitigation measures, whereas SSP5 represents a continuation of former practices leading to the highest greenhouse gas emissions and most severe impacts of climate change.\n",
     "\n",
+    "The full scenario names are identified by a name in the form of SSPx-y, where SSPx is the socioeconomic pathway used to model the scenario (as displayed in Figure 2‑2) and y is the so-called ‘radiatative forcing’ (in W/m2) resulting from the greenhouse gas emissions under the socio-economic scenario in the year 2100. The higher the greenhouse gas concentrations in the atmosphere, the larger both the radiative forcing and the temperature increase (IPCC, 2021).\n",
     "\n",
-    "```{figure} regions_map.png\n",
+    "```{figure} SSP_picture.png\n",
     "---\n",
     "width: 400px\n",
     "align: center\n",
     "---\n",
-    "Image taken from the [IPCC Atlas](https://doi.org/10.1017/9781009157896.021)"
+    "Shared Socioeconomic Pathways mapped in the challenges to mitigation/adaptation space (copied from O’Neill et al., 2017).\n",
+    "`````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`````{admonition} Global warming levels\n",
+    ":class: hint dropdown\n",
+    "Global Warming Levels (GWLs) are another way of aggregating model projections. Here, we don’t use emission scenarios as the main identifier, but we discuss levels of global temperature warming such as 1.5°C or 2°C. This offers a simpler, outcome-focused way to assess climate change impacts. Instead of focusing on uncertain emissions pathways, GWLs allow us to directly explore the risks associated with different levels of warming, which can be more intuitive for planning and decision-making. This approach sidesteps some of the uncertainties tied to future emissions and helps focus on the temperature outcomes that matter most for adaptation. However, as with emission scenarios, uncertainty remains about how other climate variables respond to a level of global warming. Averaging might lead to an important loss of detail.\n",
+    "`````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring Plausibility\n",
+    "Because projections can vary widely, it is important to explore the range of plausibility. One can learn by looking into plausible changes in locally relevant climatic impact drivers like rainfall, temperature extremes, or dry spell duration. This approach provides a more comprehensive understanding of what could happen in a specific region, going beyond the limitations of model averages. We gain deeper insights into changes in local vulnerabilities. The added granularity of projection can help decision-makers address a wider range of future scenarios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`````{admonition} CMIP vs CORDEX\n",
+    ":class: hint dropdown\n",
+    "When exploring future climate scenarios, you can use either CMIP6 or CORDEX data. CMIP6 is the latest global model, but CORDEX is a downscaled version of the older CMIP5 data, which tries to capture small-scale variations better. CORDEX can, therefore, be more useful for local and regional studies. CMIP6 has a resolution of 50 to 100km, while CORDEX can reach a resolution of 12 to 25km, making it more applicable to the regional scale.\n",
+    "`````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excercise\n",
+    "But how do we put the knowledge provided above into practice? In this excercies, we will explore the range of potential climate futures for your region and help you discover why these changes occur. These plausible changes are accompanied by individual climate models that can be reviewed for future weather patterns in one of the other CLIMAAX risk workflows. To help guide you we have worked out and example. We highlighted each of the steps using a real-life example in Latvia. Be sure to expand the Latvian example section if you want to see how we execute and interprete each step for a real study.\n",
+    "\n",
+    "\n",
+    "This page will go through the following steps: \n",
+    "1. Define locally relevant climatic impact drivers\n",
+    "1. Collect observation trends\n",
+    "1. Collect simulation trends\n",
+    "1. Look into IPCC reports why this occurs\n",
+    "1. Advanced steps"
    ]
   },
   {
@@ -42,7 +112,7 @@
    "metadata": {},
    "source": [
     "`````{admonition} Latvian example\n",
-    ":class: hint dropdown\n",
+    ":class: note dropdown\n",
     "For our example, we take the Lielupe basin, covering parts of Lithuania and Latvia. For Latvia, the basin has been characterised as a flood zone of national importance. See the figure below for an indication of the flood challenges in the region. Information on how these floods will develop in the future is of significant value as more and more adaptation plans and investments will need to be made as we head into the mid-century. \n",
     "\n",
     "```{figure} latvia_example/Latvia_flood.png\n",
@@ -58,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.\tDefine locally relevant climatic impact drivers"
+    "### 1. Define locally relevant climatic impact drivers"
    ]
   },
   {
@@ -98,7 +168,7 @@
    "metadata": {},
    "source": [
     "`````{admonition} Latvian example\n",
-    ":class: hint dropdown\n",
+    ":class: note dropdown\n",
     "Flooding in Latvia has two main flood driver in Latvia, flooding is primarily driven by two factors. One is the snowpack accumulated in winter that rapidly melts and flows into rivers during spring. Another driver is spring precipitation, which saturates the soil and when confronted with extra rainfall, the region starts to flood.\n",
     "\n",
     "To analyse developments for the two flood mechanisms we select the following climate impact drivers: \n",
@@ -111,14 +181,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.\tCollect observation trends from interactive climate atlas"
+    "### 2. Collect observation trends from interactive climate atlas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get a better understanding of what climate trend we can expect we will explore what climate trend is already observed. We analyse past climate behaviour by following the next steps: \n",
+    "To get a better understanding of what climate trend we can expect we will explore what climate trend is already observed. But before we begin we need to define our region using the IPCC climate zones. The IPCC divides Europe into four climatic zones. These zones are based on areas with similar climate typologies. For each of these zones, climate projection statistics are available. \n",
+    "- NEU - Northern Europe\n",
+    "- WCE - West and Central Europe\n",
+    "- MED - Mediterranean\n",
+    "- EEU - Eastern Europe\n",
+    "\n",
+    "```{figure} regions_map.png\n",
+    "---\n",
+    "width: 400px\n",
+    "align: center\n",
+    "---\n",
+    "IPCC climate zones in Europe. Image taken from the [IPCC Atlas](https://doi.org/10.1017/9781009157896.021)\n",
+    "\n",
+    "We analyse past climate behaviour by following the next steps: \n",
     "1. Go to [https://atlas.climate.copernicus.eu/atlas](https://atlas.climate.copernicus.eu/atlas/KphACYrm)\n",
     "1. Select your region\n",
     "1. Select the historical observation data set \"era5-land\" \n",
@@ -132,7 +215,7 @@
    "metadata": {},
    "source": [
     "`````{admonition} Latvian example\n",
-    ":class: hint dropdown\n",
+    ":class: note dropdown\n",
     "As Latvia is situated on the border between NEU and WCE we need to choose which region. Since the European risk assessment considers the Baltic states to be part of NEU we also choose this region.\n",
     "Overall, there has been an upward trend in ERA5 data for precipitation.\n",
     "\n",
@@ -160,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.\tCollect simulation trends"
+    "### 3. Collect simulation trends"
    ]
   },
   {
@@ -172,13 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "792603fff38c4178a8ab1eb73ed29c13",
+       "model_id": "2dcd4a557b93416f8a35a7ba554c8921",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3484,7 +3567,7 @@
    "metadata": {},
    "source": [
     "`````{admonition} Latvian example\n",
-    ":class: hint dropdown\n",
+    ":class: note dropdown\n",
     "When selecting the variables we can get the figures below. We notice that that the individual model projections span a much large range of change than the combined model mean of each SSP. Here we see that individual models behave differently towards the same emission scenarios. This can be either due to differences in the way they represent physicial processes or because they are subject to randomness of the weather and might have hit a cold snap or dry spell in their simulations. \n",
     "\n",
     "For precipitation we notice that as emissions go up model means also go up. Individual model projections all indicate an increase in spring precipitation the amount is more unclear. For each SSP little increases can occur (<5%) while high increases (>15%) are mostly reserved for high emission scenarios. When using this information with known flood mechanisms where soils are saturatated and extra rain leads to high discharges, we can expect more of these events to occur. An increase of 10% is not unlikely across models and can lead to severe changes in discharges.\n",
@@ -3514,7 +3597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.\tLook into IPCC reports why this occurs"
+    "### 4. Look into IPCC reports why this occurs"
    ]
   },
   {
@@ -3542,7 +3625,7 @@
    "metadata": {},
    "source": [
     "`````{admonition} Latvian example\n",
-    ":class: hint dropdown\n",
+    ":class: note dropdown\n",
     "Here we dive into the details of why precipitation is expected to increase and snowfall is decreasing. Using the information below we have a good basis. To dive into the reports if needed or reach out to other experts to tell us more.\n",
     "\n",
     "**Precipitation**\n",
@@ -3567,7 +3650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Advanced steps"
+    "### 5. Advanced steps"
    ]
   },
   {
@@ -3580,7 +3663,7 @@
     "\n",
     "    *Why this matters*: Climate projections come with uncertainty, as no single model can capture the full range of possible futures. By using a set of models that span this uncertainty, you ensure that your projections cover a wide spectrum of possible scenarios, helping to account for the unpredictable nature of climate change.\n",
     "    \n",
-    "    *Action*: Select a diverse set of climate models that represent different outcomes for the climate impact variables and use these in impact analyses. These will help you explore the range of potential outcomes, from worst-case to moderate scenarios.\n",
+    "    *Action*: Select a diverse set of climate models that represent different outcomes for the climate impact variables and use these in impact analyses, such as the CLIMAAX risk workflows. These will help you explore the range of potential outcomes, from worst-case to moderate scenarios.\n",
     "\n",
     "2. Adjusting Historical Weather Patterns with a Stochastic Weather Generator\n",
     "\n",
@@ -3589,15 +3672,11 @@
     "    Action: Use a stochastic weather generator to blend the climate signals from the models with observed historical weather data. This process can mimic how variables like temperature and precipitation might shift, while preserving local conditions.\n",
     "\n",
     "3. Use these projections in combination with socioeconomic changes\n",
+    "\n",
     "    *Why it matters*: The severity and impact of climate change depend not just on the physical climate but on how societies evolve. Integrating climate projections with different socioeconomic scenarios allows for more holistic scenarios, reflecting changes in population, technology, and governance that either increase or decrease vulnerability.\n",
     "\n",
     "    *Action*: Combine your climate model outputs with scenarios of regional socioeconomic development. For example, a lot of increased precipitation combined with rapid urban growth may result in higher risks than the same climate future with strong policy intervention and innovation. Use such combinations to explore how risks might change based on both climate and socioeconomic dynamics."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
