Move images into folder

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -50,16 +50,17 @@
    "source": [
     "`````{admonition} What are SSPs?\n",
     ":class: hint dropdown\n",
+    "\n",
     "Future climate projections are formulated around Shared Socioeconomic Pathways (SSPs), which are scenarios of projected socioeconomic global changes given the figure below. The lower SSP numbers represent more sustainable developments and a larger number of implemented climate mitigation measures, whereas SSP5 represents a continuation of former practices leading to the highest greenhouse gas emissions and most severe impacts of climate change.\n",
     "\n",
     "The full scenario names are identified by a name in the form of SSPx-y, where SSPx is the socioeconomic pathway used to model the scenario (as displayed in Figure 2‑2) and y is the so-called ‘radiatative forcing’ (in W/m2) resulting from the greenhouse gas emissions under the socio-economic scenario in the year 2100. The higher the greenhouse gas concentrations in the atmosphere, the larger both the radiative forcing and the temperature increase (IPCC, 2021).\n",
     "\n",
-    "```{figure} SSP_picture.png\n",
-    "---\n",
-    "width: 400px\n",
-    "align: center\n",
-    "---\n",
+    "```{figure} images/SSP_picture.png\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    "\n",
     "Shared Socioeconomic Pathways mapped in the challenges to mitigation/adaptation space (copied from O’Neill et al., 2017).\n",
+    "```\n",
     "`````"
    ]
   },
@@ -69,6 +70,7 @@
    "source": [
     "`````{admonition} Global warming levels\n",
     ":class: hint dropdown\n",
+    "\n",
     "Global Warming Levels (GWLs) are another way of aggregating model projections. Here, we don’t use emission scenarios as the main identifier, but we discuss levels of global temperature warming such as 1.5°C or 2°C. This offers a simpler, outcome-focused way to assess climate change impacts. Instead of focusing on uncertain emissions pathways, GWLs allow us to directly explore the risks associated with different levels of warming, which can be more intuitive for planning and decision-making. This approach sidesteps some of the uncertainties tied to future emissions and helps focus on the temperature outcomes that matter most for adaptation. However, as with emission scenarios, uncertainty remains about how other climate variables respond to a level of global warming. Averaging might lead to an important loss of detail.\n",
     "`````"
    ]
@@ -87,6 +89,7 @@
    "source": [
     "`````{admonition} CMIP vs CORDEX\n",
     ":class: hint dropdown\n",
+    "\n",
     "When exploring future climate scenarios, you can use either CMIP6 or CORDEX data. CMIP6 is the latest global model, but CORDEX is a downscaled version of the older CMIP5 data, which tries to capture small-scale variations better. CORDEX can, therefore, be more useful for local and regional studies. CMIP6 has a resolution of 50 to 100km, while CORDEX can reach a resolution of 12 to 25km, making it more applicable to the regional scale.\n",
     "`````"
    ]
@@ -113,15 +116,16 @@
    "source": [
     "`````{admonition} Latvian example\n",
     ":class: note dropdown\n",
+    "\n",
     "For our example, we take the Lielupe basin, covering parts of Lithuania and Latvia. For Latvia, the basin has been characterised as a flood zone of national importance. See the figure below for an indication of the flood challenges in the region. Information on how these floods will develop in the future is of significant value as more and more adaptation plans and investments will need to be made as we head into the mid-century. \n",
     "\n",
-    "```{figure} latvia_example/Latvia_flood.png\n",
-    "---\n",
-    "width: 400px\n",
-    "align: center\n",
-    "---\n",
+    "```{figure} images/latvia_example/Latvia_flood.png\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    "\n",
     "Flood extent in the Lielupe Basin\n",
-    "`````\n"
+    "```\n",
+    "`````"
    ]
   },
   {
@@ -169,6 +173,7 @@
    "source": [
     "`````{admonition} Latvian example\n",
     ":class: note dropdown\n",
+    "\n",
     "Flooding in Latvia has two main flood driver in Latvia, flooding is primarily driven by two factors. One is the snowpack accumulated in winter that rapidly melts and flows into rivers during spring. Another driver is spring precipitation, which saturates the soil and when confronted with extra rainfall, the region starts to flood.\n",
     "\n",
     "To analyse developments for the two flood mechanisms we select the following climate impact drivers: \n",
@@ -194,14 +199,15 @@
     "- MED - Mediterranean\n",
     "- EEU - Eastern Europe\n",
     "\n",
-    "```{figure} regions_map.png\n",
-    "---\n",
-    "width: 400px\n",
-    "align: center\n",
-    "---\n",
+    "```{figure} images/regions_map.png\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    "\n",
     "IPCC climate zones in Europe. Image taken from the [IPCC Atlas](https://doi.org/10.1017/9781009157896.021)\n",
+    "```\n",
     "\n",
     "We analyse past climate behaviour by following the next steps: \n",
+    "\n",
     "1. Go to [https://atlas.climate.copernicus.eu/atlas](https://atlas.climate.copernicus.eu/atlas/KphACYrm)\n",
     "1. Select your region\n",
     "1. Select the historical observation data set \"era5-land\" \n",
@@ -219,21 +225,21 @@
     "As Latvia is situated on the border between NEU and WCE we need to choose which region. Since the European risk assessment considers the Baltic states to be part of NEU we also choose this region.\n",
     "Overall, there has been an upward trend in ERA5 data for precipitation.\n",
     "\n",
-    "```{figure} latvia_example/pr-ERA5-Land_timeseries-NEU.png\n",
-    "---\n",
-    "width: 800px\n",
-    "align: center\n",
-    "---\n",
+    "```{figure} images/latvia_example/pr-ERA5-Land_timeseries-NEU.png\n",
+    ":width: 800px\n",
+    ":align: center\n",
+    "\n",
     "Precipitation trend in spring for NEU\n",
+    "```\n",
     "\n",
     "In the whole of NEU we find that snow has a slightly increasing trend. The trend in extra rainfall might have contributed to more snow than temperature increases have reduced snow accumulation. \n",
     "\n",
-    "```{figure} latvia_example/prsn-ERA5-Land_timeseries-NEU.png\n",
-    "---\n",
-    "width: 800px\n",
-    "align: center\n",
-    "---\n",
+    "```{figure} images/latvia_example/prsn-ERA5-Land_timeseries-NEU.png\n",
+    ":width: 800px\n",
+    ":align: center\n",
+    "\n",
     "Snow trend in winter in NEU\n",
+    "```\n",
     "\n",
     "Based on what we know of the climatic impact drivers we would expect that there are slight increases in both snowmelt and saturated soil floods.\n",
     "`````"
@@ -3568,28 +3574,26 @@
    "source": [
     "`````{admonition} Latvian example\n",
     ":class: note dropdown\n",
+    "\n",
     "When selecting the variables we can get the figures below. We notice that that the individual model projections span a much large range of change than the combined model mean of each SSP. Here we see that individual models behave differently towards the same emission scenarios. This can be either due to differences in the way they represent physicial processes or because they are subject to randomness of the weather and might have hit a cold snap or dry spell in their simulations. \n",
     "\n",
     "For precipitation we notice that as emissions go up model means also go up. Individual model projections all indicate an increase in spring precipitation the amount is more unclear. For each SSP little increases can occur (<5%) while high increases (>15%) are mostly reserved for high emission scenarios. When using this information with known flood mechanisms where soils are saturatated and extra rain leads to high discharges, we can expect more of these events to occur. An increase of 10% is not unlikely across models and can lead to severe changes in discharges.\n",
     "\n",
     "Snowfall is expected to decrease as emissions, and therefore also temperatures, increase. Given that northern europe historically received roughly 1.3 mm/day of snow in winter the range given is between a 24% reduction to a 7% increase in snowfall. Few models project an increase and might be due to randomness of weather. Howver, 7% extra snowfall in winter snowpack can result into large changes in melt discharges and might be worth investigating as a potential 'what if' scenario. a reduction of 24% is also interesting as it greatly limits snow accumulation and therefore the snow melt flood mechanism. \n",
     "\n",
+    "```{figure} images/latvia_example/cascade_plot_NEU_precip_marmay_2050.png\n",
+    ":width: 100%\n",
+    ":align: center\n",
     "\n",
-    "```{figure} latvia_example/cascade_plot_NEU_precip_marmay_2050.png\n",
-    "---\n",
-    "width: 100%\n",
-    "align: center\n",
-    "name: \"\"\n",
-    "---\n",
-    "PLot of uncertainties for climate variable in NEU\n",
+    "Plot of uncertainties for climate variable in NEU\n",
+    "```\n",
     "\n",
-    "```{figure} latvia_example/cascade_plot_NEU_snow_decfeb_2050.png\n",
-    "---\n",
-    "width: 100%\n",
-    "align: center\n",
-    "name: \"\"\n",
-    "---\n",
-    "PLot of uncertainties for climate variable in NEU\n",
+    "```{figure} images/latvia_example/cascade_plot_NEU_snow_decfeb_2050.png\n",
+    ":width: 100%\n",
+    ":align: center\n",
+    "\n",
+    "Plot of uncertainties for climate variable in NEU\n",
+    "```\n",
     "`````"
    ]
   },
@@ -3626,6 +3630,7 @@
    "source": [
     "`````{admonition} Latvian example\n",
     ":class: note dropdown\n",
+    "\n",
     "Here we dive into the details of why precipitation is expected to increase and snowfall is decreasing. Using the information below we have a good basis. To dive into the reports if needed or reach out to other experts to tell us more.\n",
     "\n",
     "**Precipitation**\n",
