Adapt widget for handbook inclusion

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -260,9 +260,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{include} widget.html\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -3563,7 +3575,6 @@
     }
    ],
    "source": [
-    "######## replace with code from html with js\n",
     "from cascade_plot_widget import plot_widget\n",
     "plot_widget()"
    ]
