--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -58,7 +58,7 @@
     ":width: 400px\n",
     ":align: center\n",
     "\n",
-    "Shared Socioeconomic Pathways mapped in the challenges to mitigation/adaptation space (copied from O’Neill et al., 2017).\n",
+    "Shared Socioeconomic Pathways mapped in the challenges to mitigation/adaptation space (copied from [O’Neill et al., 2017](http://dx.doi.org/10.1016/j.gloenvcha.2015.01.004)).\n",
     "```\n",
     "`````"
    ]
@@ -175,8 +175,9 @@
     "Flooding in Latvia has two main flood drivers in Latvia, flooding is primarily driven by two factors. One is the snowpack accumulated in winter that rapidly melts and the melt water flows into rivers during spring. Another driver is spring precipitation, which saturates the soil and when this soil is confronted with extra rainfall, the region starts to flood.\n",
     "\n",
     "To analyse developments for the two flood mechanisms we select the following climate impact drivers: \n",
-    "- average precipitation march till may \n",
-    "- snowfall in December till February\n",
+    "\n",
+    "- Average precipitation March till May \n",
+    "- Snowfall in December till February\n",
     "`````"
    ]
   },
@@ -326,6 +327,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{seealso}\n",
+    "\n",
+    "The data visualized above is available from our [CLIMATE SCENARIOS](https://github.com/CLIMAAX/CLIMATE_SCENARIOS/) GitHub repository.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4. Look into IPCC reports why this occurs"
    ]
   },
@@ -389,19 +400,19 @@
    "source": [
     "Here we propose some steps that could be taken to gain better insights into the actual impacts of these future trends.\n",
     "\n",
-    "1. Using Climate Time Series from Multiple Models in impact analysis\n",
+    "1.  **Using climate time series from multiple models in impact analysis**\n",
     "\n",
     "    *Why this matters*: Climate projections come with uncertainty, as no single model can capture the full range of possible futures. By using a set of models that span this uncertainty, you ensure that your projections cover a wide spectrum of possible scenarios. This helps you to account for the unpredictable nature of climate change.\n",
     "    \n",
     "    *Action*: Select a diverse set of climate models that represent different outcomes for the climate impact variables and use these in impact analyses, such as the CLIMAAX risk workflows. This will help you explore the range of potential outcomes, from worst-case to moderate scenarios.\n",
     "\n",
-    "2. Adjusting Historical Weather Patterns with a Stochastic Weather Generator\n",
+    "2.  **Adjusting historical weather patterns with a stochastic weather generator**\n",
     "\n",
     "    *Why this matters*: Simply applying model projections can be too coarse for the complexity of daily weather variations. By adjusting historical weather patterns based on projected climate signals, you can generate more detailed scenarios of how weather might evolve under future climate conditions. Stochastic Weather Generators also provide a method to increase the length of your time-series enabling extreme value analysis.\n",
     "\n",
     "    Action: Use a stochastic weather generator to blend the climate signals from the models with observed historical weather data. This process can mimic how variables like temperature and precipitation might shift, while preserving local conditions.\n",
     "\n",
-    "3. Use these projections in combination with socioeconomic changes\n",
+    "3.  **Use these projections in combination with socioeconomic changes**\n",
     "\n",
     "    *Why it matters*: The severity and impact of climate change depend not just on the physical climate but also on how societies evolve. Integrating climate projections with different socioeconomic scenarios allows for more holistic scenarios, reflecting changes in population, technology, and governance that either increase or decrease vulnerability.\n",
     "\n",
